[-] * Huawei E17X has broken UCS-2, do not use it (bug #962).
[-] * Do not fail if phone does not support extended SMS params (bug #927).
[+] * Added support for Samsung calendar (bug #839).
[-] * Do not choke on OK in message text.
[-] * Add ID of Nokia 6020b (bug #1004).
[-] * Fix decoding of SMS with extended characters.
[-] * Fixed handling of DCT4 specific functions.
    
20090908 - 1.26.1

[-] * CPIN reply is handled like regular one except in A2D case (bug #994).
[-] * Fix finding first empty position when memory is empty (bug #996).
[-] * Fixed parsing of SMS status reports.
[-] * Fixed parsing of text messages with new lines (bug #995).
    
20090904 - 1.26.0

[-] * Fixed handling of RunOnReceive error code.
[-] * Fixed crash when encoding USSD dials.
[-] * Fixed decoding of phonebook entries on Motorola (bug #988).
[-] * Fixed decoding of long text messages (bug #990).
[-] * Fixed location of saved message (bug #989).
[-] * Added ID for Nokia 1681c.

20090827 - 1.25.93

[-] * Fixed reading of phonebook from Samsung (bug #980).
[-] * Add ID for Nokia 3390b (bug #982).
[-] * DCT3 dependent code reports error when phone is not DCT3 (bug #982).
[-] * Fixed reading of DCT4 file folders (bug #986).
    
20090821 - 1.25.92

[+] * Reworked RPM packages (separate libraries and SMSD).
[-] * Huawei E160 uses encoded USSD requests.
[+] * Better support for messages on Motorola, thanks to Quintin Hill.
[-] * Fix reading of SMS backups without text (bug #963).
[-] * Send message even if SendingTimeOut is null (bug #977).
[-] * Disabled automatic OBEX for Motorola phones.
[!] * Increased limits for message length, bump soname to 7 because of
      this.
[!] * Changed SMSD tables to be able to handle longer messages from
      Motorola phones.
    
20090813 - 1.25.91

[+] * Documented most commands in man page.
[+] * Completed Czech translation of Gammu.
[-] * Avoid crash on some Nokia smses (bug #959).